--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.1"
+  },
+  "dependencies": {
+    "import": "0.0.6",
+    "material-ui": "^0.15.2",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
