--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "frontend-boilerplate",
-  "version": "1.0.0",
-  "private": true,
-  "description": "A boilerplate of things that shouldn't exist",
+  "name": "cytoscape.next",
+  "version": "0.1.0",
+  "description": "New web version of Cytoscape",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -37,6 +36,8 @@
     "redux-actions": "^0.9.1"
   },
   "dependencies": {
+    "cy-network-store": "^0.9.0",
+    "cy-network-viewer": "^0.9.0",
     "import": "0.0.6",
     "material-ui": "^0.15.2",
     "react-tap-event-plugin": "^1.0.0"
