--- a/package.json
+++ b/package.json
@@ -16,16 +16,14 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "postcss-loader": "^0.8.1",
-    "rucksack-css": "^0.8.5",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.7.1",
     "babel-runtime": "^6.5.0",
     "classnames": "^2.2.3",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-react": "^5.2.2",
+    "file-loader": "^0.8.5",
+    "postcss-loader": "^0.8.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
@@ -33,13 +31,20 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
-    "redux-actions": "^0.9.1"
+    "redux-actions": "^0.9.1",
+    "rucksack-css": "^0.8.5",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
     "cy-network-store": "^0.9.0",
     "cy-network-viewer": "^0.9.0",
+    "immutable": "^3.8.1",
     "import": "0.0.6",
     "material-ui": "^0.15.2",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "redux-thunk": "^2.1.0"
   }
 }
