--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cy-network-viewer": "^0.9.0",
     "immutable": "^3.8.1",
     "import": "0.0.6",
+    "material-design-icons": "^2.2.3",
     "material-ui": "^0.15.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux-thunk": "^2.1.0"
